--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>jStorage - simple JavaScript plugin to store data locally</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
-		
+
 		<style type="text/css">
 			body{font-family: Sans-serif;font-size: 13px;color: #333;}
 			table{border-left: 1px solid #CDEB8B;border-top: 1px solid #CDEB8B;}
@@ -12,12 +12,12 @@
 			thead{background: #006E2E;color: white;}
 			.container{width: 700px;margin: 10px auto;}
 		</style>
-		
+
 		<script src="http://ajax.googleapis.com/ajax/libs/prototype/1.6.1.0/prototype.js"></script>
 		<script src="jstorage.js"></script>
-		
+
 		<script>
-			JSOTRAGE_TEST = {
+			jStorageTest = {
 				/**
 				 * insert_value
 				 * takes data from form fields and stores it with jStorage
@@ -32,40 +32,40 @@
 						$('key').focus();
 						return;
 					}
-					$.jStorage.set(key, val);
+					jStorage.set(key, val);
 					$('key').value = "";
 					$('val').value = "";
 					this.reDraw();
 				},
-			
+
 				/**
 				 * get_value
 				 * alerts a value from jStorage with a key from a form field
 				 * @return
 				 */
 				get_value: function(){
-					var value = $.jStorage.get($F("key2"));
+					var value = jStorage.get($F("key2"));
 					alert(value);
 					$('key2').value = "";
 				},
-			
+
 				/**
 				 * flush_values
 				 * clears all data
 				 * @return
 				 */
 				flush_values: function(){
-					$.jStorage.flush();
+					jStorage.flush();
 					this.reDraw();
 				},
-			
+
 				/**
 				 * reDraw
 				 * fills table with data from jStorage
 				 * @return
 				 */
 				reDraw: function(){
-					var row, del, st=$.jStorage.storageObj()
+					var row, del, st=jStorage.storageObj()
 					$$("tr[class~=rida]").each(function(c){c.remove();});
 					for(var i in st){
 						row = new Element("tr",{className:"rida"});
@@ -74,7 +74,7 @@
 						del = new Element("a",{href:"javascript:void(0)"}).update("DEL");
 						(function(i){
 							del.observe("click", function(){
-								$.jStorage.deleteKey(i);
+								jStorage.deleteKey(i);
 								this.reDraw();
 							});
 						}).call(this,i)
@@ -86,15 +86,15 @@
 		</script>
 	</head>
 	<body>
-	
+
 	<div class="container">
-	
+
 	<h1>jStorage - store data locally with JavaScript</h1>
 
 	<p><strong><a href="http://www.jstorage.info">jStorage</a></strong> is a simple wrapper plugin for Prototype, MooTools and jQuery to cache data on browser side.</p>
-	
+
 	<p>Add some values and refresh the page - if your browser supports storing local data, then the values should survive the page refresh.</p>
-	
+
 	<table cellspacing="0" cellpadding="0" style="width: 100%">
 	<thead>
 		<tr><td width="120">KEY</td><td>VALUE</td><td width="50">&nbsp;</td></tr>
@@ -104,26 +104,26 @@
 		<tr>
 			<td><input type="text" id="key" name="key" value="" style="width: 110px;" /></td>
 			<td><input type="text" id="val" name="val" value="" style="width: 98%" /></td>
-			<td><a href="javascript:JSOTRAGE_TEST.insert_value()">ADD</a></td>
+			<td><a href="javascript:jStorageTest.insert_value()">ADD</a></td>
 		</tr>
 		<tr>
 			<td><input type="text" id="key2" name="key2" value="" style="width: 110px;" /></td>
-			<td>Clicking "GET" alerts the value for provided key with the method <em>$.jStorage.get(key)</em></td>
-			<td><a href="javascript:JSOTRAGE_TEST.get_value()">GET</a></td>
+			<td>Clicking "GET" alerts the value for provided key with the method <em>jStorage.get(key)</em></td>
+			<td><a href="javascript:jStorageTest.get_value()">GET</a></td>
 		</tr>
 		<tr>
 			<td>&nbsp;</td>
 			<td>Clear all saved data</td>
-			<td><a href="javascript:JSOTRAGE_TEST.flush_values()">FLUSH</a></td>
+			<td><a href="javascript:jStorageTest.flush_values()">FLUSH</a></td>
 		</tr>
 	</tfoot>
 	</table>
-	
+
 	<p>&copy; 2010 Andris Reinman, <a href="mailto:andris.reinman@gmail.com">andris.reinman@gmail.com</a><br /><a href="http://www.jstorage.info">jStorage</a> is licensed under <a href="http://www.jstorage.info/static/license.txt">MIT-styled license</a>, so basically you can do whatever you want to do with it.</p>
-	
+
 	<script>
 		// Fill the table with previously saved data
-		JSOTRAGE_TEST.reDraw();
+		jStorageTest.reDraw();
 	</script>
 
 	</body>
